syntax = "proto3";

option go_package = "../protobuf";

import "annotations.proto";

message EchoRequest {
  string name = 1;
}

message EchoResponse {
  string name = 1;
}

message RegisterUserRequest {
  int64  Id = 1;
  string Email = 2;
  string Name = 3;
  string Password = 4;
}

message RegisterUserResponse {
  int64  Id = 1;
}

message LoginUserRequest {
  string Email = 1;
  string Password = 2;
}

message LoginUserResponse {
  string AccessToken = 1;
  string RefreshToken = 2;
  string Name = 3;
}

message TokenTestRequest {

}

message TokenTestResponse {
  string msg = 1;
}

message TokenValidRequest {
  string token = 1;
}


//TODO: change id type from int64 -> uint64
message TokenValidResponse {
  bool valid = 1;
  uint64 Id = 2;
  string msg =3;
}


message NotFoundRequest {}
message NotFoundResponse {
  string msg = 1;
}

service NotFound {
  rpc NotFound(NotFoundRequest) returns (NotFoundResponse) {
    option (google.api.http) = {
      get: "/v1/not_found"
    };
  }
}

service Echo {
  rpc Echo(EchoRequest) returns (EchoResponse){
    option (google.api.http) = {
      post: "/v1/echo"
      body: "*"
    };
  }
}



service User {
  rpc RegisterUser(RegisterUserRequest) returns (RegisterUserResponse) {
    option (google.api.http) = {
      post: "/v1/user/register"
      body: "*"
    };
  }
  rpc LoginUser(LoginUserRequest) returns (LoginUserResponse) {
    option (google.api.http) = {
      post: "/v1/user/login"
      body: "*"
    };
  }
  rpc TokenTest(TokenTestRequest) returns (TokenTestResponse) {
    option (google.api.http) = {
      post: "/v1/user/tokenTest"
      body: "*"
    };
  }
  rpc TokenValid(TokenValidRequest) returns (TokenValidResponse) {};
}
